# xml_attribute_extraction

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  extractor.py  main.py  pyproject.toml  sample_patent.xml
tests/: __init__.py  test_extractor.py
